deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nv-wa-skill
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: nv-wa-skill-live-tls
      hosts:
        - nv-wa-skill.lol
        - www.nv-wa-skill.lol
  rules:
    - host: nv-wa-skill.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nv-wa-skill
                port:
                  number: 80
